Fixed wrong anchor position on mobile.

--- a/css/sections.less
+++ b/css/sections.less
@@ -60,14 +60,7 @@ section {
         }
     }
 
-}
-
-section.color-breaker {
-    /**
-    * One invisible section to keep 
-    */
-    display: none;
-}
+} 
 
 section.separator {
     background-size: cover;
@@ -91,3 +84,5 @@ sections.page .page-content-sections section {
     }
     &.separator:extend(section.separator) {}
 }
+
+section.none { display: none }
